Support debounced embedding update and removed health endpoint in api (#48)
* Support debounced embedding update and removed health endpoint in api

* Skip test for now

* Auto commit: update dependencies & generated client & code formatting

---------
